// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModificationEntry should match snapshot 1`] = `
<div>
  <div
    class="border border-white/10 rounded-xl p-3 bg-white/10 hover:bg-white/15 transition-all"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2 flex-1"
      >
        <div
          class="w-8 h-8 rounded-full bg-primary/20 backdrop-blur-sm flex items-center justify-center flex-shrink-0"
        >
          <svg
            class="h-4 w-4 text-primary"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-sm truncate"
            >
              testuser
            </span>
          </div>
          <p
            class="text-xs text-muted-foreground mt-0.5"
          >
            25
             pixel
            s
             changed
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            Region: (
            10
            , 
            10
            ) 
            5
            ×
            5
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            just now
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-2 flex-shrink-0"
      >
        <canvas
          class="flex-shrink-0 border border-white/20 rounded"
          height="9"
          style="max-width: 48px; max-height: 48px; image-rendering: pixelated;"
          width="9"
        />
        <div
          class="flex flex-col items-center gap-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ModificationEntry should match snapshot as owner 1`] = `
<div>
  <div
    class="border border-white/10 rounded-xl p-3 bg-white/10 hover:bg-white/15 transition-all"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2 flex-1"
      >
        <div
          class="w-8 h-8 rounded-full bg-primary/20 backdrop-blur-sm flex items-center justify-center flex-shrink-0"
        >
          <svg
            class="h-4 w-4 text-primary"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-sm truncate"
            >
              testuser
            </span>
          </div>
          <p
            class="text-xs text-muted-foreground mt-0.5"
          >
            25
             pixel
            s
             changed
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            Region: (
            10
            , 
            10
            ) 
            5
            ×
            5
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            just now
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-2 flex-shrink-0"
      >
        <canvas
          class="flex-shrink-0 border border-white/20 rounded"
          height="9"
          style="max-width: 48px; max-height: 48px; image-rendering: pixelated;"
          width="9"
        />
        <div
          class="flex flex-col items-center gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 w-8"
            title="Disable modification"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
              />
              <line
                x1="1"
                x2="23"
                y1="1"
                y2="23"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModificationEntry should match snapshot when disabled 1`] = `
<div>
  <div
    class="border border-white/10 rounded-xl p-3 bg-white/10 hover:bg-white/15 transition-all"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="flex items-start gap-2 flex-1"
      >
        <div
          class="w-8 h-8 rounded-full bg-primary/20 backdrop-blur-sm flex items-center justify-center flex-shrink-0"
        >
          <svg
            class="h-4 w-4 text-primary"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-medium text-sm truncate"
            >
              testuser
            </span>
            <span
              class="text-xs bg-red-500/20 backdrop-blur-sm px-2 py-0.5 rounded-full text-red-400"
            >
              Disabled
            </span>
          </div>
          <p
            class="text-xs text-muted-foreground mt-0.5"
          >
            25
             pixel
            s
             changed
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            Region: (
            10
            , 
            10
            ) 
            5
            ×
            5
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            just now
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-2 flex-shrink-0"
      >
        <canvas
          class="flex-shrink-0 border border-white/20 rounded"
          height="9"
          style="max-width: 48px; max-height: 48px; image-rendering: pixelated;"
          width="9"
        />
        <div
          class="flex flex-col items-center gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 w-8"
            title="Enable modification"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
